--- a/root/index.html
+++ b/root/index.html
@@ -30,6 +30,7 @@
     
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
+    <link href="../my-nav.css" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
@@ -37,15 +38,38 @@
   <body class="text-white">
 
     <header class="mb-auto" id="top">
-      <div>
-        <h3 class="float-md-start mb-0"> </h3>
-        <nav class="navbar bg-gray fixed-top nav-masthead justify-content-center float-md-end">
-          <a class="nav-link active" aria-current="page" href="#top">Home</a>
-          <a class="nav-link" href="#about">About</a>
-          <a class="nav-link" href="#projects">Projects</a>
-          <a class="nav-link" href="contact.html">Contact</a>
-        </nav>
-      </div>
+      <div class="header fixed-top">
+        <div class="my-navbar collapsible" id="navbar">
+            <div class="my-navbar-icon"></div>
+            <div class="my-nav-container my-navlinks-container">
+                <div class="my-navelement">
+                    <div class="my-navlink active">
+                        <a href="#top">home</a>
+                    </div>
+                </div>
+                <div class="my-navelement">
+                    <div class="my-navlink">
+                        <a href="#about">about</a>
+                    </div>
+                </div>
+                <div class="my-navelement">
+                    <div class="my-navlink">
+                        <a href="#projects">projects</a>
+                    </div>
+                </div>
+                <div class="my-navelement">
+                  <div class="my-navlink">
+                      <a href="#contact">contact</a>
+                  </div>
+              </div>
+            </div>
+            <div class="my-nav-container my-navright-container">
+                <div class="nav-right">
+                    andrew cooke
+                </div>
+            </div>
+        </div>
+    </div>
     </header>
     
     <main>
@@ -62,7 +86,7 @@
       <div class="about-container d-flex w-100 h-100 p-3 mx-auto" id="about">
         <div class="row">
           <div class="about-me-image col-md-5 d-flex justify-content-center align-items-center">
-              <img src="images/pixel_portrait.png" id="pixel_portrait" class="portrait img-responsive img-rounded center-block">
+              <img src="../images/pixel_portrait.png" id="pixel_portrait" class="portrait img-responsive img-rounded center-block">
           </div>
           <div class="col-md-7 d-flex align-items-center">
             <p class="lead">
