--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="about-container d-flex w-100 h-100 p-3 mx-auto" id="about">
         <div class="row">
           <div class="about-me-image col-md-5 d-flex justify-content-center align-items-center">
-              <img src="../images/pixel_portrait.png" id="pixel_portrait" class="portrait img-responsive img-rounded center-block">
+              <img src="images/pixel_portrait.png" id="pixel_portrait" class="portrait img-responsive img-rounded center-block">
           </div>
           <div class="col-md-7 d-flex align-items-center">
             <p class="lead">
