--- a/sandbox/index_sb.html
+++ b/sandbox/index_sb.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta author="Andrew Cooke">
         <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="../root/my-nav.css">
+        <link rel="stylesheet" href="../docs/my-nav.css">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     </head>
 
